--- a/Text_engine/Anisim_Task/Anisim_Task.vcxproj
+++ b/Text_engine/Anisim_Task/Anisim_Task.vcxproj
@@ -127,7 +127,8 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="Anisim_Task.cpp" />
+    <ClCompile Include="main.cpp" />
+    <ClCompile Include="game.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
